--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "14.1.0",
     "openai": "^4.95.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-modal": "^3.16.3",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
